# Phylax

./: README.md
phylax_base/: CMakeLists.txt  package.xml
phylax_base/include/phylax_base/: phylax_hardware.h
phylax_base/launch/: phylax.launch  phylax_simple.launch
phylax_base/src/: phylax_base.cpp  phylax_hardware.cpp  simple_joy_node.cpp
phylax_bringup/: CMakeLists.txt  package.xml
phylax_bringup/launch/: phylax_lidar.launch  phylax_robot.launch
phylax_bringup/scripts/: install
phylax_control/: CMakeLists.txt  package.xml
phylax_control/config/: control.yaml  robot_localization.yaml  teleop.yaml  teleop_ps4.yaml  twist_mux.yaml
phylax_control/launch/: control.launch  teleop.launch
phylax_description/: CMakeLists.txt  package.xml
phylax_description/launch/: description.launch  point2laser.launch
phylax_description/urdf/: accessories.urdf.xacro  empty.urdf  phylax.gazebo.xacro  phylax.urdf.xacro  phylax_base.gazebo.xacro  phylax_base.urdf.xacro
phylax_description/urdf/accessories/: VLP-16.urdf.xacro  bridge_plate.urdf.xacro  hokuyo_ust10.urdf.xacro  novatel_smart6.urdf.xacro  sick_lms1xx_mount.urdf.xacro
phylax_description/urdf/configs/: front_laser
phylax_msgs/: CMakeLists.txt  package.xml
phylax_msgs/msg/: Drive.msg  DriveFeedback.msg  Feedback.msg
phylax_navigation/: CMakeLists.txt  package.xml  phylax_amcl.launch
phylax_navigation/include/: amcl.launch  gmapping.launch
phylax_navigation/launch/: phylax_gmapping.launch  phylax_odom.launch
phylax_navigation/launch/include/: move_base.launch
phylax_navigation/maps/: phylax_race.yaml
phylax_navigation/params/map_nav_params/: local_costmap_params.yaml
phylax_simulator/phylax_gazebo/: CMakeLists.txt  package.xml
phylax_simulator/phylax_gazebo/launch/: phylax_world.launch
phylax_simulator/phylax_gazebo/models/phylax_house/: model.config  model.sdf
phylax_simulator/phylax_gazebo/worlds/: phylax_house.world
phylax_simulator/phylax_simulator/: CMakeLists.txt  package.xml
phylax_viz/: CMakeLists.txt  package.xml
phylax_viz/launch/: view_model.launch  view_robot.launch
phylax_viz/rviz/: gmapping.rviz  localization.rviz  model.rviz  robot.rviz
