<?xml version="1.0"?>
<package format="2">
  <name>phylax_base</name>
  <version>0.1.0</version>
  <description>The Phylax Rover Driver</description>
  

  <maintainer email="i.piperakis@gmail.com">Joseph Piperakis</maintainer>


  <license>GPLv2</license>


  <!-- url type="website">https://github.com/joseppii/Phylax</url-->
  <url type="bugtracker">https://github.com/joseppii/Phylax/issues</url>
  <url type="repository">https://github.com/joseppii/Phylax</url> 


  <author email="i.piperakis@gmail.com">Joseph</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roslaunch</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
