<?xml version="1.0"?>
<package format="2">
  <name>phylax_bringup</name>
  <version>0.1.0</version>
  <description>The phylax_bringup package</description>

  <maintainer email="i.piperakis@gmail.com">Joseph Piperakis</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/phylax_bringup</url> -->
  <author email="i.piperakis@gmail.com">Joseph Piperakis</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <export>
  </export>
</package>
