<?xml version="1.0"?>
<package format="2">
  <name>phylax_control</name>
  <version>0.1.0</version>
  <description>The Phylax controller package</description>
  <maintainer email="i.piperakis@gmail.com">Joseph Piperakis</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/phylax_control</url> -->

  <author email="i.piperakis@gmail.com">Joseph Piperakis</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <!--build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>diff_drive_controller</build_export_depend>
  <build_export_depend>interactive_marker_twist_server</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>joy</build_export_depend>
  <build_export_depend>robot_localization</build_export_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <build_export_depend>teleop_twist_joy</build_export_depend>
  <build_export_depend>topic_tools</build_export_depend>
  <build_export_depend>twist_mux</build_export_depend-->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>interactive_marker_twist_server</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>twist_mux</exec_depend>


  <export>

  </export>
</package>
