<?xml version="1.0"?>
<package format="2">
  <name>phylax_msgs</name>
  <version>0.1.0</version>
  <description>The phylax_msgs package</description>

  <maintainer email="i.piperakis@tgmail.com">Joseph Piperakis</maintainer>


  <license>BSD</license>


  <!--url type="website">http://wiki.ros.org/phylax_msgs</url-->
  <author email="i.piperakis@gmail.com">Joseph Piperakis</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
