<?xml version="1.0"?>
<package format="2">
  <name>phylax_viz</name>
  <version>0.1.0</version>
  <description>Phylax vizualization lancher package</description>

  <maintainer email="i.piperakis@gmail.com">Joseph Piperakis</maintainer>

  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/phylax_viz</url> -->

  <author email="i.piperakis@gmail.com">Joseph Piperakis</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>rviz</build_depend>
  
  <exec_depend>phylax_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export></export>
</package>
