<?xml version="1.0"?>
<package format="2">
  <name>phylax_gazebo</name>
  <version>0.0.1</version>
  <description>Launch files for using Gazebo with Phylax.</description>

  <maintainer email="i.piperakis@gmail.com">Joseph Piperakids</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/phylax_gazebo</url> -->

  <author email="i.piperakis@gmail.com">Joseph Piperakis</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
